# about-me-api

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/actions/lint/: action.yml
.github/workflows/: lint.yml  merge_pull_request.yml  open_pull_request.yml  pull_request.yml  push.yml
.github/workflows/actions/initialize/: action.yml
.github/workflows/actions/lint/: action.yml
api/: admin.py  enums.py  urls.py
api/migrations/: 0001_initial.py  0002_alter_user_managers.py
api/models/: base.py  user.py
api/views/: health_check.py
config/: urls.py
config/settings/: base.py
