[tool.poetry]
name = "abount-me-api"
version = "0.1.0"
description = ""
authors = ["butterthon <butterthon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.5"
django-environ = "^0.9.0"
mysqlclient = "^2.1.1"
gunicorn = "^20.1.0"
uvicorn = "^0.18.2"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
